Replace class bytecode in the running IDE without a restart
eclipse_hot_code_replace redefines classes of a running bundle from the
class files a workspace project or a directory holds, through
java.lang.instrument, so a trace statement or a changed method body gets
into the IDE, this server included, without restarting it.

The agent is loaded through a helper JVM because a JVM refuses to attach
to itself, and it lives in the system class loader so it outlives the
bundle. Classes are loaded through the installed bundle before being
redefined, so a class nobody has touched yet still gets the new body on
first use. The JVM's limits apply and are reported by name: only method
bodies can change, and a schema change is refused with its reason.

Assisted-by: multiple AI agents and layers of automated tooling 🤖